--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^16.0.0
   lottie: ^3.3.1
+  openid_client: ^0.4.9
+  flutter_web_auth_2: ^4.1.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
