--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   openid_client: ^0.4.9
   flutter_web_auth_2: ^4.1.0
   flutter_secure_storage: ^9.2.4
+  http: ^1.4.0
+  pointycastle: ^3.9.1
+  asn1lib: ^1.6.5
 
 dev_dependencies:
   flutter_test:
