--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^1.4.0
   pointycastle: ^3.9.1
   asn1lib: ^1.6.5
+  animated_notch_bottom_bar: ^1.0.3
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
